--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 ---
 startDelaySeconds: 0
-hostPort: 127.0.0.1:1234
-jmxUrl: service:jmx:rmi:///jndi/rmi://127.0.0.1:1234/jmxrmi
+hostPort: 0.0.0.0:5000
+jmxUrl: service:jmx:rmi:///jndi/rmi://0.0.0.0:5000/metrics
 ssl: false
 lowercaseOutputName: false
 lowercaseOutputLabelNames: false
